syntax = "proto2";

package networkapi;

// Define the request message
message SendDataRequest {
    required string data = 1;
}

// Define the response message
message SendDataResponse {
    required string status = 1;
}

// Define the gRPC service
service NetworkAPI {
    rpc SendData(SendDataRequest) returns (SendDataResponse);
}
